fix : text overflow and wrap

--- a/src/styles/components/_component.scss
+++ b/src/styles/components/_component.scss
@@ -28,16 +28,18 @@
 
         .component
         {
-            width: $app_width;
+            max-width: $app_width;
             margin: ($margin * 4) $margin;
 
             display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
 
             padding: $margin;
 
             .image
             {
-                width: 500px;
+                max-width: 500px;
                 height: 500px;
                 overflow: hidden;
                 object-fit: cover;
@@ -48,6 +50,7 @@
             {
 
                 width: calc(100% - 500px);
+                min-width: 400px;
 
                 .comp_title
                 {
@@ -58,7 +61,7 @@
                 
                 .comp_text
                 {
-                    margin: 0 $margin;
+                    margin: $margin;
                     font-size: 18px;
                     
                 }
